# cxx-command-line-skeleton

./: CMakeLists.txt  README.md  skeleton.cpp
